--- a/style.css
+++ b/style.css
@@ -1,18 +1,29 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
+}
+body {
+    background-color: #161719;
+}
+h1 , h3{
+    color: white;
+}
+p{
+    color: #48494b;
 }
 ul{
     margin: 20px 0px;
 }
 ul li a{
     text-decoration: none;
-    color: #0a7d0a;
+    color: #336349;
 }
 ul li{
     list-style: none;
     display: inline-block;
     padding: 0px 5px;
+    color: grey;
 }
 .service{
     margin: 20px 0px;
